compiler/internal/frontend/testdata/parser/positive/types/protocols.tetra
struct Vec2:
    x: Int

protocol Renderable:
    func draw(self: Vec2) -> Int

func main() -> Int:
    return 0
