compiler/internal/frontend/testdata/parser/negative/module.tetra
func main() -> Int:
    return 0

module misplaced
